# adventofcode2019

./: .pre-commit-config.yaml  README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day12.py  day13.py  pyproject.toml  requirements.txt  requiremets.txt
.github/workflows/: linter.yml  tests.yml
tests/: conftest.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day12.py
