[tool.poetry]
name = "adventofcode2019"
version = "0.1.0"
description = ""
authors = ["Konstantin Baikov <konstantin.baikov.ext@siemens-healthineers.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
