[tool.poetry]
name = "adventofcode2019"
version = "0.1.0"
description = ""
authors = ["Konstantin Baikov"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.8.1"
anytree = "^2.7.2"
numpy = "^1.17.4"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
black = "^19.10b0"
coverage = "5.0b2"
ipython = "^7.10.1"

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = ["if __name__ == .__main__.:"]

[tool.coverage.html]
directory = "coverage_html_report"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
